# brain

./: .env.example  .gitignore  API_SERVICES_SUMMARY.txt  AUDIT_COMPLET.md  DEPLOYMENT_CHECKLIST.md  DEVELOPER_GUIDE.md  LICENSE  PROJECT_SUMMARY.txt  QUICK_START.sh  RAPPORT_EXECUTION.md  README.md  README_INDEX.md  SETUP_GUIDE.md  next.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json
python-services/: causal_engine.py  main.py  pyproject.toml  requirements.txt
src/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
src/app/api/auth/callback/: route.ts
src/app/api/chat/: route.ts
src/app/api/patients/: route.ts
src/app/api/pdf/: route.ts
src/app/api/sources/: route.ts
src/app/api/transcribe/: route.ts
src/app/auth/: page.tsx
src/app/dashboard/: page.tsx
src/app/onboarding/: page.tsx
src/components/chat/: ChatContainer.tsx  ChatInput.tsx  MessageList.tsx  QuickActions.tsx
src/components/dashboard/: Header.tsx  Sidebar.tsx
src/components/patient-form/: PatientFormContainer.tsx
src/components/patient-form/sections/: CommonSection.tsx  VitalSigns.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Checkbox.tsx  Input.tsx  Modal.tsx  Select.tsx  Spinner.tsx
src/hooks/: useAuth.ts  useChat.ts  useLanguage.ts  useSpecialty.ts
src/lib/: anthropic.ts  firebase.ts  medical-prompts.ts  supabase.ts  translations.ts
src/store/: authStore.ts  chatStore.ts  devModeStore.ts  patientStore.ts  uiStore.ts
src/types/: chat.ts  index.ts  medical.ts  patient.ts  specialty.ts
supabase/migrations/: 001_initial.sql
(+12 files in other folders)
